--- a/homepage.html
+++ b/homepage.html
@@ -15,20 +15,20 @@
 <!-- the logo and the navigator -->
 
 <div class = "header_box">
-   <!-- <a href = "./homepage.html"><img class = "logo" src = "assets/logo/hutong_chinese.jpg"></a>-->
-    <div class = "title">
-        Hutong Artifacts
-    </div>
+
+        <a href = "./homepage.html" class = "title">
+            Hutong Artifacts
+           </a>
     <b class = "menu_box">
-        <div class = "menu">
+        <a href = "./gate_building.html" class = "menu">
             Gate Building
-        </div>
-        <div class = "menu">
+        </a>
+        <a href = "./door_pier.html" class = "menu">
             Door Pier
-        </div>
-        <div class = "menu">
+        </a>
+        <a href = "./brick_carving.html" class = "menu">
             Brick Carving
-        </div>
+        </a>
     </b>
 
 </div>
@@ -37,28 +37,64 @@
 <!-- welcome section -->
 <div class = "welcome_box">
     <a class = "body_text">
-    Welcome to the world of
+    Welcome to the living museum of
     </a>
     <a class = "title">
     BEIJING HUTONGS
     </a>
 </div>
+
+
 <!-- home page image -->
 
+<img id = "home_img" src="assets/gates/guangliang_1.jpg">
 
 <!-- explore artifacts section -->
 
-<a class = "subtitle">
+
+<a class = "center_text">
     Explore artifacts
     </a>
 
-<div class = "explore_box_1">
-    <a href="./door_pier.html"></a><img class = "large_image"  src="assets/photo/pier1.jpg">
 
+<div class = "explore_box_1">
+    <div class = "large_image">
+        <a href = "./door_pier.html"> <img class = "large_image" src="assets/pier/pier_1.jpg"></a>
+    </div>
+    <div class = "small_image">
+        <img src="assets/pier/pier_2.jpg">
+    </div>
+</div>
+
+<div class = "explore_box_2">
+    <div class = "small_image">
+        <img src="assets/pier/pier_3.jpg">
+    </div>
+    <div class = "large_image">
+        <img src="assets/pier/pier_4.jpeg">
+    </div>
+</div>
+
+<div class = "explore_box_3">
+    <div class = "small_image">
+        <img src="assets/pier/pier_5.jpg">
+    </div>
+    <div class = "small_image">
+        <img src="assets/pier/pier_7.jpg">
+    </div>
+</div>
+
+<div class = "explore_box_1">
+    <div class = "large_image">
+        <img src="assets/pier/pier_1.jpg">
+    </div>
+    <div class = "small_image">
+        <img src="assets/pier/pier_2.jpg">
     </div>
 </div>
 
 
+<hr class ="bottom_line">
 
 </body>
 </html>
