--- a/gate_building.html
+++ b/gate_building.html
@@ -7,11 +7,22 @@
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="css/styles.css">
+
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
 </head>
   
 
 <body>
 
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="js/carousel.js"defer></script>
+
+
+    
 <!-- the logo and the navigator -->
 
 <div class = "header_box">
@@ -49,12 +60,35 @@ which is the most auspicious.
 <br>The gate is the "face" of the household. </br>
 
 </div>
+
     <img class = "intro_img" src="assets/gates/guangliang_2.jpg">
 </div>
+
+<hr class ="bottom_line">
+
+  <div class="gate_carousel_wrapper">
+        <div class="carousel">
+          <a class = "carousel_container"><div> GuangLiang Gate </div><img src="assets/gates/guangliang_2.jpg"></a>
+          <div><img src="assets/pier/pier_1.jpg"><div> Jinzhu Gate </div></div>
+          <div><img src="assets/pier/pier_1.jpg"><div> Ruyi Gate </div></div>
+          <div><img src="assets/pier/pier_1.jpg"><div> Manzi Gate </div></div>
+          <div><img src="assets/pier/pier_1.jpg"><div> Suiqiang Gate </div></div>
+          <div><img src="assets/pier/pier_1.jpg"><div> Western Style Gate </div></div>
+        </div>
+        <div class ="carousel-nav">
+            <div><img src="assets/gates/guangliang_2.jpg"></div>
+            <div><img src="assets/pier/pier_1.jpg"></div>
+            <div><img src="assets/pier/pier_1.jpg"></div>
+            <div><img src="assets/pier/pier_1.jpg"></div>
+            <div><img src="assets/pier/pier_1.jpg"></div>
+            <div><img src="assets/pier/pier_1.jpg"></div>
+          </div>
+  </div>
+
 
 
 
 <hr class ="bottom_line">
-
+  
 </body>
 </html>
