--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
   
 
@@ -34,12 +35,23 @@
 </div>
 <hr class ="line">
 
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
+
+
+
 <!-- welcome section -->
 <div class = "welcome_box">
-    <a class = "body_text">
+    <a class = "body_text" data-aos="fade-right">
     Welcome to the living museum of
     </a>
-    <a class = "title">
+    <a class = "title"  data-aos="fade-left"
+    data-aos-anchor="#example-anchor"
+    data-aos-offset="500"
+    data-aos-duration="500">
     BEIJING HUTONGS
     </a>
 </div>
@@ -47,35 +59,39 @@
 
 <!-- home page image -->
 
-<img id = "home_img" src="assets/gates/guangliang_1.jpg">
+<img id = "home_img" data-aos="fade-right" data-aos-duration="1000" src="assets/gates/guangliang_1.jpg">
 
 <!-- explore artifacts section -->
 
 
-<a class = "center_text">
+<a class = "center_text" data-aos="fade-up"
+data-aos-duration="1000">
     Explore artifacts
     </a>
 
-
-<div class = "explore_box_1">
-    <div class = "large_image">
-        <a href = "./door_pier.html"> <img class = "large_image" src="assets/pier/pier_1.jpg"></a>
+<div class = "explore_container" data-aos="fade-up"
+data-aos-duration="2000">
+    <div class = "explore_box_1" >
+        <div class = "large_image" >
+            <a href = "./door_pier.html"> <img class = "large_image" src="assets/pier/pier_1.jpg"></a>
+            <div class="overlay-text">Hover over me!</div>
+        </div>
+        <div class = "small_image">
+            <img src="assets/pier/pier_2.jpg">
+        </div>
     </div>
-    <div class = "small_image">
-        <img src="assets/pier/pier_2.jpg">
+
+    <div class = "explore_box_2" >
+        <div class = "small_image">
+            <img src="assets/pier/pier_3.jpg">
+        </div>
+        <div class = "large_image">
+            <img src="assets/pier/pier_4.jpeg">
+        </div>
     </div>
 </div>
 
-<div class = "explore_box_2">
-    <div class = "small_image">
-        <img src="assets/pier/pier_3.jpg">
-    </div>
-    <div class = "large_image">
-        <img src="assets/pier/pier_4.jpeg">
-    </div>
-</div>
-
-<div class = "explore_box_3">
+<div class = "explore_box_3" >
     <div class = "small_image">
         <img src="assets/pier/pier_5.jpg">
     </div>
@@ -84,7 +100,7 @@
     </div>
 </div>
 
-<div class = "explore_box_1">
+<div class = "explore_box_1" >
     <div class = "large_image">
         <img src="assets/pier/pier_1.jpg">
     </div>
