--- a/gate_building.html
+++ b/gate_building.html
@@ -69,7 +69,7 @@ which is the most auspicious.
   <div class="gate_carousel_wrapper">
         <div class="carousel">
           <a class = "carousel_container"><div> GuangLiang Gate </div><img src="assets/gates/guangliang_2.jpg"></a>
-          <div><img src="assets/pier/pier_1.jpg"><div> Jinzhu Gate </div></div>
+          <div><img src="assets/gates/jinzhu_1.jpg"><div> Jinzhu Gate </div></div>
           <div><img src="assets/pier/pier_1.jpg"><div> Ruyi Gate </div></div>
           <div><img src="assets/pier/pier_1.jpg"><div> Manzi Gate </div></div>
           <div><img src="assets/pier/pier_1.jpg"><div> Suiqiang Gate </div></div>
