--- a/homepage.html
+++ b/homepage.html
@@ -61,6 +61,29 @@
 
 <img id = "home_img" data-aos="fade-right" data-aos-duration="1000" src="assets/gates/guangliang_1.jpg">
 
+
+<!-- introduction to hutongs -->
+<a class = "center_text" data-aos="fade-up"
+data-aos-duration="1000">
+    What are Hutongs？
+    </a>
+
+<div class = "intro_container">
+        <div class = "body_text">
+    
+            <br>Hutongs, originated from Mongolian “gudum”, are the small lanes or alleys in
+            towns or villages that lead into the residence area. </br>
+            <br>There are thousands of Hutongs in Beijing, densely covering every corner of the old Beijing city
+            area like its veins.</br>
+            <br>They are no wider than 9 meters and can be as short in width as 0.5 meters, stretching from North to South, or from
+            East to West.</br>
+
+    <br> You can find precious relics of traditional Chinese dwellings named “四合院”, or, Beijing Quadrangles, in the hutongs. Let's find out! </br>
+        </div>
+     <img class = "intro_img" src="assets/gates/guangliang_2.jpg">
+</div>
+
+
 <!-- explore artifacts section -->
 
 
