--- a/brick_carving.html
+++ b/brick_carving.html
@@ -34,6 +34,49 @@
 </div>
 <hr class ="line">
 
+<div class = "subtitle">
+    BRICK CARVINGS
+ </div>
+
+
+<!-- Introduction -->
+<div class = "intro_container">
+    <div class = "body_text">
+
+        Brick carvings often appear on the eaves, doors and flowers. The designs are
+        usually pines, bamboos, flowers and birds, mythological figures, or Bogutu,
+        which show the aesthetic interest of the owners of the house.
+
+
+</div>
+    <img class = "intro_img" src="assets/pier/pier_14.jpg">
+</div>
+
+
+<hr class ="line">
+<!-- collection -->
+
+<div class = "subtitle_right">
+    COLLECTION
+ </div>
+
+ <div class = "collection_container">
+    <img class = "collection" src="assets/brick-carving/brick_1.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_2.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_3.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_4.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_5.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_6.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_7.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_8.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_9.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_10.jpg">
+    <img class = "collection" src="assets/brick-carving/brick_11.jpeg">
+    <img class = "collection" src="assets/brick-carving/brick_12.JPG">
+</div>
+
+
+
 <hr class ="bottom_line">
 
 </body>
