--- a/door_pier.html
+++ b/door_pier.html
@@ -43,16 +43,16 @@
 <div class = "intro_container">
     <div class = "body_text">
 
-The gate of the Quadrangle symbolizes the ranking of the house and the status of the
-owner. The shape, form and depth of the gate has strict regulations in ancient China. The
-gate buildings are mostly located in the southeast corner and open to the
-south. This is because in the Eight Diagrams, the southeast is in the "Sung" position,
-which is the most auspicious. 
+        The pillow stone, or the pier, is two stones set on the door sill, which connects the rotating
+        shaft of the door and facilitate the rotation of the door. There are two types of pillow
+        stones: one is the drum-shaped stone, which is round in shape and looks like a drum. The
+        other is the square door pier. Door pier is an important decorative object in the gate
+        building, and it is often carved with flowers and plants, animals and other patterns, for the
+        purpose of rejecting evil.
 
-<br>The gate is the "face" of the household. </br>
 
 </div>
-    <img class = "intro_img" src="assets/pier/pier_14.jpg">
+    <img class = "intro_img" src="assets/pier/pier_3.jpg">
 </div>
 
 
@@ -61,22 +61,116 @@ which is the most auspicious.
 
 <div class = "subtitle_right">
     COLLECTION
- </div>
+</div>
 
  <div class = "collection_container">
-    <img class = "collection" src="assets/pier/pier_1.jpg">
-    <img class = "collection" src="assets/pier/pier_2.jpg">
-    <img class = "collection" src="assets/pier/pier_4.jpeg">
-    <img class = "collection" src="assets/pier/pier_5.jpg">
-    <img class = "collection" src="assets/pier/pier_7.jpg">
-    <img class = "collection" src="assets/pier/pier_8.jpg">
-    <img class = "collection" src="assets/pier/pier_11.jpg">
-    <img class = "collection" src="assets/pier/pier_10.jpg">
-    <img class = "collection" src="assets/pier/pier_12.jpg">
-    <img class = "collection" src="assets/pier/pier_13.jpg">
-    <img class = "collection" src="assets/pier/pier_14.jpg">
-    <img class = "collection" src="assets/pier/pier_18.jpeg">
-</div>
+    <div class = "collection"><img src="assets/pier/pier_1.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+    <div class = "collection"><img src="assets/pier/pier_2.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+    <div class = "collection"><img src="assets/pier/pier_4.jpeg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+    <div class = "collection"><img src="assets/pier/pier_5.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+    <div class = "collection"><img src="assets/pier/pier_6.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+    <div class = "collection"><img src="assets/pier/pier_7.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+    <div class = "collection"><img src="assets/pier/pier_8.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_10.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_9.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_11.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_12.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_13.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+
+    <div class = "collection"><img src="assets/pier/pier_14.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+
+    <div class = "collection"><img src="assets/pier/pier_15.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+
+    <div class = "collection"><img src="assets/pier/pier_16.jpeg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_17.jpeg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_18.jpeg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_19.jpeg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_20.jpeg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_21.jpeg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_22.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
+    <div class = "collection"><img src="assets/pier/pier_3.jpg">
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_location"> Located in NanluoGuxiang</div></div>
+    </div>
+
 
 <hr class ="bottom_line">
 
