--- a/homepage.html
+++ b/homepage.html
@@ -68,20 +68,19 @@ data-aos-duration="1000">
     What are Hutongs？
     </a>
 
-<div class = "intro_container">
-        <div class = "body_text">
+<div  id ="background_1">
+<div class = "intro_container" >
+        <div class = "body_text" id = "hutong_intro" data-aos="fade-right" data-aos-duration="2000">
     
-            <br>Hutongs, originated from Mongolian “gudum”, are the small lanes or alleys in
+            <br>—— Hutongs, originated from Mongolian “gudum”, are the small lanes or alleys in
             towns or villages that lead into the residence area. </br>
-            <br>There are thousands of Hutongs in Beijing, densely covering every corner of the old Beijing city
-            area like its veins.</br>
-            <br>They are no wider than 9 meters and can be as short in width as 0.5 meters, stretching from North to South, or from
+            <br>—— There are thousands of Hutongs in Beijing.</br>
+            <br>—— They are no wider than 9 meters and can be as short in width as 0.5 meters, stretching from North to South, or from
             East to West.</br>
-
-    <br> You can find precious relics of traditional Chinese dwellings named “四合院”, or, Beijing Quadrangles, in the hutongs. Let's find out! </br>
         </div>
-     <img class = "intro_img" src="assets/gates/guangliang_2.jpg">
-</div>
+    </div>
+    </div>
+
 
 
 <!-- explore artifacts section -->
@@ -96,21 +95,24 @@ data-aos-duration="1000">
 data-aos-duration="2000">
     <div class = "explore_box_1" >
         <div class = "large_image" >
-            <a href = "./door_pier.html"> <img class = "large_image" src="assets/pier/pier_1.jpg"></a>
-            <div class="overlay-text">Hover over me!</div>
+            <a href = "./door_pier.html"> <img class = "large_image_blur" src="assets/pier/pier_1.jpg">
+            <div class="overlay-text" >Door Piers <br> >>> </div></a>
         </div>
         <div class = "small_image">
-            <img src="assets/pier/pier_2.jpg">
+        <img src="assets/pier/pier_4.jpeg">
+        </a>
         </div>
     </div>
 
     <div class = "explore_box_2" >
         <div class = "small_image">
-            <img src="assets/pier/pier_3.jpg">
+     <img src="assets/gates/suiqiang-1.jpg">
         </div>
         <div class = "large_image">
-            <img src="assets/pier/pier_4.jpeg">
-        </div>
+            <a href = "./gate_building.html"><img class = "large_image_blur"src="assets/gates/ruyi_4.jpeg">
+            <div class="overlay-text">Gate Buildings <br> >>> </div> </a>
+              </div>
+            </div>
     </div>
 </div>
 
@@ -125,15 +127,17 @@ data-aos-duration="2000">
 
 <div class = "explore_box_1" >
     <div class = "large_image">
-        <img src="assets/pier/pier_1.jpg">
+        <a href = "./brick_carving.html"><img class = "large_image_blur" src="assets/brick-carving/brick_8.jpeg">
+            <div class="overlay-text">Brick Carvings <br> >>> </div> </a>
     </div>
     <div class = "small_image">
-        <img src="assets/pier/pier_2.jpg">
+        <img src="assets/brick-carving/brick_1.jpeg">
     </div>
 </div>
 
 
 <hr class ="bottom_line">
+
 
 </body>
 </html>
