--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class = "header_box">
 
-        <a href = "./homepage.html" class = "title">
+        <a href = "./index.html" class = "title">
             Hutong Artifacts
            </a>
     <b class = "menu_box">
