--- a/brick_carving.html
+++ b/brick_carving.html
@@ -65,11 +65,13 @@
 <hr class ="line">
 <!-- collection -->
 
-<div class = "subtitle_right">
+<div class = "subtitle_right" data-aos="fade-up"
+data-aos-duration="1000">
     COLLECTION
  </div>
 
- <div class = "collection_container">
+ <div class = "collection_container" data-aos="fade-up"
+ data-aos-duration="2000">
     <div class = "collection"><img src="assets/brick-carving/brick_1.jpeg">
         <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
