--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <!-- home page image -->
 
-<img id = "home_img" data-aos="fade-right" data-aos-duration="1000" src="assets/gates/guangliang_1.jpg">
+<img id = "home_img" data-aos="fade-right" data-aos-duration="1000" src="assets/hutong_1.jpg">
 
 
 <!-- introduction to hutongs -->
