--- a/gate_building.html
+++ b/gate_building.html
@@ -103,15 +103,15 @@ data-aos-duration="2000">
           <div> <div class="carousel_title"> Ru-Yi Gate </div><img src="assets/gates/ruyi_4.jpeg"></div>
           <div> <div class="carousel_title"> Man-Zi Gate </div><img src="assets/gates/manzi_1.jpg"></div>
           <div> <div class="carousel_title"> Embedded Gate </div><img src="assets/gates/suiqiang 3.jpg"></div>
-          <div> <div class="carousel_title"> Western-style Gate </div><img src="assets/gates/western_1.jpg"></div>
+          <div> <div class="carousel_title"> Western-style Gate </div><img src="assets/gates/western_1.JPG"></div>
       </div>
 </div>
     <div class="row" id="mobile-step">
           <div class="testimonial-image-slider slider-nav text-center">
             <div class="carousel_description">
               <div class ="carousel_text">Guang Liang Gate is the gate with the highest level, found in Beijing
-                quadrangles where highly ranked government officials and the richest people
-                live in. Guang Liang gate has the largest base and widest space in front of the
+                quadrangles where highly ranked government officials in ancient China
+                lived in. Guang Liang gate has the largest base and widest space in front of the
                 wooden door. Its door frame is positioned between two middle columns, dividing the gate room
                 in two halves.</div>
             </div>
