--- a/gate_building.html
+++ b/gate_building.html
@@ -87,7 +87,7 @@ data-aos-duration="1000">
   <div><img src="assets/gates/ruyi_4.jpeg"></div>
   <div><img src="assets/gates/manzi_1.jpg"></div>
   <div><img src="assets/gates/suiqiang 3.jpg"></div>
-  <div><img src="assets/gates/western_1.jpg"></div>
+  <div><img src="assets/gates/western_1.JPG"></div>
 </div>
 
 
