--- a/door_pier.html
+++ b/door_pier.html
@@ -48,7 +48,7 @@
 
 <!-- Introduction -->
 
-<div  id ="background_2">
+<div  id ="background_2" alt="A round door pier with flower carvings on it">
 <div class = "intro_container" >
         <div class = "body_text" id = "pier_intro" data-aos="fade-right" data-aos-duration="2000">
     
@@ -75,15 +75,15 @@ data-aos-duration="1000">
  <div class = "collection_container" data-aos="fade-up"
  data-aos-duration="2000">
     <div class = "collection"><img src="assets/pier/pier_1.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier with Qilin</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/pier/pier_2.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier with Lion</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/pier/pier_4.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/pier/pier_5.jpg">
@@ -91,20 +91,20 @@ data-aos-duration="1000">
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/pier/pier_6.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/pier/pier_7.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier with Lion</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/pier/pier_8.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier with flowers</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_10.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
@@ -119,18 +119,18 @@ data-aos-duration="1000">
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_12.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_13.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier with dragon</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
 
     <div class = "collection"><img src="assets/pier/pier_14.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier with lion</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
@@ -152,12 +152,12 @@ data-aos-duration="1000">
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_18.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_19.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
@@ -167,17 +167,17 @@ data-aos-duration="1000">
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_21.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_22.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Rectangular Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
     <div class = "collection"><img src="assets/pier/pier_3.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">High-class Drum-shaped Pier</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
 
