--- a/gate_building.html
+++ b/gate_building.html
@@ -48,13 +48,15 @@
 </div>
 <hr class ="line">
 
-    <div class = "subtitle">
-        GATE BUILDINGS
-     </div>
+
+<!-- introduction section -->
+
+<div class = "subtitle">
+    GATE BUILDINGS
+    </div>
 
 
-     
-<div  id ="background_4">
+<div  id ="background_4" alt="A majestic gate building">
   <div class = "intro_container" >
           <div class = "body_text" id = "pier_intro" data-aos="fade-right" data-aos-duration="2000">
       
@@ -73,21 +75,24 @@
  
 <hr class ="bottom_line">
 
+<!-- 6 types of gates section -->
 
 <div class = "center_text" data-aos="fade-up"
 data-aos-duration="1000">
     6 Types of Gate Buildings
  </div>
 
+<!-- carousel using slick library-->
+
 
  <div class ="carousel-nav" data-aos="fade-up"
  data-aos-duration="2000">
-  <div><img src="assets/gates/guangliang_2.jpg"></div>
-  <div><img src="assets/gates/jinzhu_2.jpg"></div>
-  <div><img src="assets/gates/ruyi_4.jpeg"></div>
-  <div><img src="assets/gates/manzi_1.jpg"></div>
-  <div><img src="assets/gates/suiqiang 3.jpg"></div>
-  <div><img src="assets/gates/western_1.JPG"></div>
+  <div><img src="assets/gates/guangliang_2.jpg" alt="The Guang-liang Gate"></div>
+  <div><img src="assets/gates/jinzhu_2.jpg" alt="The Jin-zhu Gate"></div>
+  <div><img src="assets/gates/ruyi_4.jpeg" alt="The Ru-yi Gate"></div>
+  <div><img src="assets/gates/manzi_1.jpg" alt="The man-zi Gate"></div>
+  <div><img src="assets/gates/suiqiang 3.jpg" alt="The Embedded Gate"></div>
+  <div><img src="assets/gates/western_1.JPG" alt="The Western Style Gate"></div>
 </div>
 
 
@@ -105,7 +110,9 @@ data-aos-duration="2000">
           <div> <div class="carousel_title"> Embedded Gate </div><img src="assets/gates/suiqiang 3.jpg"></div>
           <div> <div class="carousel_title"> Western-style Gate </div><img src="assets/gates/western_1.JPG"></div>
       </div>
-</div>
+</div> 
+<!-- text carousel, credits to https://codepen.io/james60708/pen/mvqKyz -->
+
     <div class="row" id="mobile-step">
           <div class="testimonial-image-slider slider-nav text-center">
             <div class="carousel_description">
