--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <!-- home page image -->
 
-<img id = "home_img" data-aos="fade-right" data-aos-duration="1000" src="assets/hutong_1.jpg">
+<img id = "home_img" data-aos="fade-right" data-aos-duration="1000" src="assets/hutong_1.jpg" alt="A man walking in a traditional Chinese Alley">
 
 
 <!-- introduction to hutongs -->
@@ -68,7 +68,7 @@ data-aos-duration="1000">
     What are Hutongs？
     </a>
 
-<div  id ="background_1">
+<div  id ="background_1"  alt="An aerial view of a traditional beijing dwelling">
 <div class = "intro_container" >
         <div class = "body_text" id = "hutong_intro" data-aos="fade-right" data-aos-duration="2000">
     
@@ -95,21 +95,21 @@ data-aos-duration="1000">
 data-aos-duration="2000">
     <div class = "explore_box_1" >
         <div class = "large_image" >
-            <a href = "./door_pier.html"> <img class = "large_image_blur" src="assets/pier/pier_1.jpg">
+            <a href = "./door_pier.html"> <img class = "large_image_blur" src="assets/pier/pier_1.jpg"  alt="A drum-shaped door pier artifact">
             <div class="overlay-text" >Door Piers <br> >>> </div></a>
         </div>
         <div class = "small_image">
-        <img src="assets/pier/pier_4.jpeg">
+        <img src="assets/pier/pier_4.jpeg" alt="A door pier artifact">
         </a>
         </div>
     </div>
 
     <div class = "explore_box_2" >
         <div class = "small_image">
-     <img src="assets/gates/suiqiang-1.jpg">
+     <img src="assets/gates/suiqiang-1.jpg" alt="The gate of a traditional dwelling">
         </div>
         <div class = "large_image">
-            <a href = "./gate_building.html"><img class = "large_image_blur"src="assets/gates/ruyi_4.jpeg">
+            <a href = "./gate_building.html"><img class = "large_image_blur"src="assets/gates/ruyi_4.jpeg" alt="The gate of a traditional dwelling">
             <div class="overlay-text">Gate Buildings <br> >>> </div> </a>
               </div>
             </div>
@@ -118,20 +118,20 @@ data-aos-duration="2000">
 
 <div class = "explore_box_3" >
     <div class = "small_image">
-        <img src="assets/pier/pier_5.jpg">
+        <img src="assets/pier/pier_5.jpg" alt="A door pier artifact">
     </div>
     <div class = "small_image">
-        <img src="assets/pier/pier_7.jpg">
+        <img src="assets/pier/pier_7.jpg" alt="A door pier artifact">
     </div>
 </div>
 
 <div class = "explore_box_1" >
     <div class = "large_image">
-        <a href = "./brick_carving.html"><img class = "large_image_blur" src="assets/brick-carving/brick_8.jpeg">
+        <a href = "./brick_carving.html"><img class = "large_image_blur" src="assets/brick-carving/brick_8.jpeg" alt="A door pier artifact">
             <div class="overlay-text">Brick Carvings <br> >>> </div> </a>
     </div>
     <div class = "small_image">
-        <img src="assets/brick-carving/brick_1.jpeg">
+        <img src="assets/brick-carving/brick_1.jpeg" alt="A door pier artifact">
     </div>
 </div>
 
