--- a/brick_carving.html
+++ b/brick_carving.html
@@ -23,7 +23,6 @@
 <!-- the logo and the navigator -->
 
 <div class = "header_box">
-    <!-- <a href = "./homepage.html"><img class = "logo" src = "assets/logo/hutong_chinese.jpg"></a>-->
     <a href = "./index.html" class = "title">
         Hutong Artifacts
        </a>
@@ -49,7 +48,7 @@
 
 <!-- Introduction -->
 
-<div  id ="background_3">
+<div  id ="background_3" alt="Brick carving on the ridge of a traditional Beijing dwelling">
     <div class = "intro_container" >
             <div class = "body_text" id = "pier_intro" data-aos="fade-right" data-aos-duration="2000">
         
@@ -61,8 +60,8 @@
         </div>
         </div>
     
-
 <hr class ="line">
+
 <!-- collection -->
 
 <div class = "subtitle_right" data-aos="fade-up"
@@ -73,51 +72,51 @@ data-aos-duration="1000">
  <div class = "collection_container" data-aos="fade-up"
  data-aos-duration="2000">
     <div class = "collection"><img src="assets/brick-carving/brick_1.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Deer and Plum Flowers</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_2.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Birds and Pine</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_3.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Seasons</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_4.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Treasure Cabinet</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_5.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Peony</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_6.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Sacred Beast</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_7.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Treasure Cabinet</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_8.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Peony and Pine</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_9.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Flowers and Bats</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_10.jpg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Peony</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_11.jpeg">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Roof Ridge</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
     <div class = "collection"><img src="assets/brick-carving/brick_12.JPG">
-        <div class = "collection_text_box"> <div class = "collection_name">Drum-shaped Pier</div>
+        <div class = "collection_text_box"> <div class = "collection_name">Shadow Wall</div>
         <div class = "collection_location"> Located in NanluoGuxiang</div></div>
     </div>
   
